[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/enemy_kendra.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemy_kendra_ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/new/kendra/kendra_0.png" type="Texture" id=3]
[ext_resource path="res://sprites/new/kendra/kendra_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/new/kendra/kendra_2.png" type="Texture" id=5]
[ext_resource path="res://sprites/new/kendra/kendra_3.png" type="Texture" id=6]
[ext_resource path="res://sprites/new/kendra/kendra_4.png" type="Texture" id=7]
[ext_resource path="res://sprites/new/kendra/kendra_5.png" type="Texture" id=8]
[ext_resource path="res://sprites/new/kendra/kendra_6.png" type="Texture" id=9]
[ext_resource path="res://sprites/new/kendra/kendra_7.png" type="Texture" id=10]
[ext_resource path="res://sprites/new/kendra/kendra_8.png" type="Texture" id=11]
[ext_resource path="res://sprites/new/kendra/kendra_9.png" type="Texture" id=12]
[ext_resource path="res://sprites/new/kendra/kendra_10.png" type="Texture" id=13]
[ext_resource path="res://sprites/new/kendra/kendra_11.png" type="Texture" id=14]
[ext_resource path="res://sprites/new/kendra/kendra_12.png" type="Texture" id=15]
[ext_resource path="res://sprites/new/kendra/kendra_13.png" type="Texture" id=16]
[ext_resource path="res://sprites/new/kendra/kendra_14.png" type="Texture" id=17]
[ext_resource path="res://sprites/new/kendra/kendra_15.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "move",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 44.4426, 24.989 )

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.291962, -121.01, 0, -132.479, 0, 132.919, 119.863, -0.414902, 0, 0, -134.679, 5.28154, -0.732086, 120.18, 0, 0, -1.32038, -137.32, -120.887, -1.29515, 0, 0, 0, 0, -0.732086, -121.01 )
}

[node name="enemy_kendra" type="KinematicBody2D" index="0" groups=[
"enemy",
]]

z_index = 50
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]
__meta__ = {
"_edit_horizontal_guides_": [ -120.686, 120.866 ],
"_edit_vertical_guides_": [ -120.145, 120.299 ]
}
speed = 100
health = 15
value = 10
ball = ExtResource( 2 )

[node name="sprites" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "move"

[node name="shape" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="path" type="Path2D" parent="." index="2"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="follow" type="PathFollow2D" parent="path" index="0"]

editor/display_folded = true
position = Vector2( -3.16994, 120.228 )
rotation = -0.053751
offset = 392.398
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="fp-kendra-ball" parent="path/follow" index="0" instance=ExtResource( 2 )]

[node name="follow2" type="PathFollow2D" parent="path" index="1"]

editor/display_folded = true
position = Vector2( -3.16994, 120.228 )
rotation = -0.053751
offset = 392.398
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="fp-kendra-ball" parent="path/follow2" index="0" instance=ExtResource( 2 )]

[node name="follow3" type="PathFollow2D" parent="path" index="2"]

editor/display_folded = true
position = Vector2( -3.16994, 120.228 )
rotation = -0.053751
offset = 392.398
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="fp-kendra-ball" parent="path/follow3" index="0" instance=ExtResource( 2 )]

[node name="follow4" type="PathFollow2D" parent="path" index="3"]

editor/display_folded = true
position = Vector2( -3.16994, 120.228 )
rotation = -0.053751
offset = 392.398
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="fp-kendra-ball" parent="path/follow4" index="0" instance=ExtResource( 2 )]

[node name="follow5" type="PathFollow2D" parent="path" index="4"]

editor/display_folded = true
position = Vector2( -3.16994, 120.228 )
rotation = -0.053751
offset = 392.398
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="fp-kendra-ball" parent="path/follow5" index="0" instance=ExtResource( 2 )]


